# czech-media-rss-app

./: CHANGELOG.md  README.md  czech-media-rss  pyproject.toml  requirements.txt
reports/: feed_validation_2026-02-18.json  feed_validation_2026-02-18.md  feed_validation_latest.json
scripts/: validate_feeds.py
src/czech_media_rss_app/: __init__.py  app.py  config.py  feeds.py
