[project]
name = "czech-media-rss-app"
version = "0.2.0"
description = "Tkinter demo app for browsing recent headlines from major Czech media outlets via RSS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.32.3",
]

[project.scripts]
czech-media-rss = "czech_media_rss_app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
